--- a/package.json
+++ b/package.json
@@ -7,5 +7,8 @@
   "license": "MIT",
   "dependencies": {
     "workbox-webpack-plugin": "^5.1.2"
+  },
+  "devDependencies": {
+    "webpack": "^4.46.0"
   }
 }
